--- a/flashcard.html
+++ b/flashcard.html
@@ -4,6 +4,8 @@ i<!DOCTYPE html>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>German-English Flashcards v2.4 - Enhanced Voice Options</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="alternate icon" href="favicon.ico">
     <style>
         * {
             margin: 0;
