Fix favicon: Add cache-busting for browser tab display

--- a/flashcard.html
+++ b/flashcard.html
@@ -4,8 +4,9 @@ i<!DOCTYPE html>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>German-English Flashcards v2.4 - Enhanced Voice Options</title>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="alternate icon" href="favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg?v=2.4.1">
+    <link rel="alternate icon" href="favicon.ico?v=2.4.1">
+    <link rel="shortcut icon" href="favicon.ico?v=2.4.1">
     <style>
         * {
             margin: 0;
